--- a/index.html
+++ b/index.html
@@ -63,9 +63,11 @@
             <div class="item_container">
                 <div class="item active">
                     <main class="main">
-                        <img src="./assets/images/iphone_vert.png" alt="" width="580" height="580" class="iphone_vert">
+                        <!-- <img src="./assets/images/iphone_vert.png" alt="" width="580" height="580" class="iphone_vert">
                         <img src="./assets/images/iphone_horiz.png" alt="" width="580" height="580"
-                            class="iphone_horiz">
+                            class="iphone_horiz"> -->
+                            <img src="./assets/images/iphone_vert2.png" alt="" class="iphone_vert">
+                            <img src="./assets/images/iphone_horiz2.png" alt="" class="iphone_horiz">
                     </main>
                 </div>
                 <div class="item slide2">
@@ -75,26 +77,25 @@
                         
                     </main> -->
                     <div class="slider2_wrap">
-                        <!-- <div class="slider-wrap__black-vertical-one none"></div> -->
-                        <div class="slider2__image_1">
+                        <div class="slider2_image_1_black none_black black_screen"></div>
+                        <div class="slider2_image_1 slider_image" black_screen_name=".slider2_image_1_black">
                             <img src="./assets/images/slide2_iphone_vert2.png">
                         </div>
                     </div>
                     <div class="slider2_wrap">
-                        <!-- <div class="slider-wrap__black-vertical-two none"></div> -->
-                        <div class="slider2__image_2">
+                        <div class="slider2_image_2_black none_black black_screen"></div>
+                        <div class="slider2_image_2 slider_image" black_screen_name=".slider2_image_2_black">
                             <img src="./assets/images/slide2_iphone_vert1.png">
                         </div>
                     </div>
                     <div class="slider2_wrap">
-                        <!-- <div class="slider-wrap__black-vertical-three none"></div> -->
-                        <div class="slider2__image_3">
+                        <div class="slider2_image_3_black none_black black_screen"></div>
+                        <div class="slider2_image_3 slider_image" black_screen_name=".slider2_image_3_black">
                             <img src="./assets/images/slide2_iphone_vert2.png">
                         </div>
                     </div>
                     </main>
                 </div>
-
             </div>
             <form action="" class="action_button">
                 <input class="right_button button" type="button">
